--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Pblocker yt bypass</title>
+	<title>Pblocker yt ad bypass</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<link href="style.css" rel="stylesheet" type="text/css" />
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-	<h1 class="center">Pblocker yt bypass</h5>
+	<h1 class="center">Pblocker yt ad bypass</h5>
 		<div class=center>
 			<h3>Insert YouTube Link:</h3>
 			<input id="url" type="text" placeholder="" required>
